chap09/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels:
    name: pod
spec:
  containers:
  - name: pod
    image: alpine
    command:
    - "sleep"
    - "infinity"
